# icaps-2025-linearization

./: .gitignore
src/: CMakeLists.txt  Model.cpp  Model.h  PrecsEffs.cpp  PrecsEffs.h  ProgressionNetwork.h  main.cpp
src/linearizer/: CMakeLists.txt
src/linearizer/include/: linearizer.h
